--- a/week1/skyisthelimit/style.css
+++ b/week1/skyisthelimit/style.css
@@ -1,3 +1,60 @@
+* {
+    box-sizing : border-box;
+}
+
+#header {
+    position : relative;
+    height: 100em;
+    width:  100%;
+    background-image: url(assets/background.jpg);
+    background-size: contain;
+}
+
+#logo {
+    margin : 15% 50%;
+    width: 128px;
+    height: 128px; 
+    position : absolute;
+    display : inline-block;
+    background-image: url(assets/logo.png);
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
+#cigar {
+
+    height : 300px;
+    width: 500px;
+    background-image: url(assets/m82_cigar.jpg);
+    position: absolute;
+    display: block;
+    z-index: 1;
+
+}
+
+#pinwheel {
+
+}
+
+
+#sombrero {
+
+}
+    
 h1 {
-    color: blue;
+    font-family : sans-serif;
+    font-size: 50px;
+    width: 500px;
+    color: white;
+    position : absolute;
+    display : inline-block;
+    z-index: 1;
+}
+
+.row {
+    
+    width: 500px;
+    height: 300px;
+    background-size: contain;
+    display: block;
 }
