--- a/week1/mymails-part1/style.css
+++ b/week1/mymails-part1/style.css
@@ -1,50 +1,267 @@
 /* UI Kit */
+body {
+  margin: 0px;
+}
+
+.logo {
+    width: 80px;
+}
+
+h1 {
+    font-family: "Varela Round", sans-serif;
+    font-size: 30px;
+}
+
+.avatar {
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+h6 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    margin: 0px;
+}
+
+p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+}
+
+span {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+}
+
+.delete {
+    width: 25px;
+    height: 25px;
+    font-size: 18px;
+    margin: 20px;
+    color: #1161f5;
+    border: 1px #1161f5 solid;
+    border-radius: 50px;
+    text-align: center;
+}
+
+#search-message {
+    margin-right: 2vh;
+    width: 45vw;
+    padding: 12px;
+    border-radius: 10px;
+    border: none;
+    border-bottom: 1px solid #dadada;
+}
+
+#btn-search {
+    width: 6vw;
+    padding: 6px;
+    border: 2px #ffffff solid;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: #1161f5;
+    font-size: 16px;
+}
+
 #container-uikit {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  background-color: #f1f5f9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #f1f5f9;
 }
 
 .section-uikit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
-  height: 35vh;
-  width: 25vw;
-  background-color: #ffffff;
-  border: 1px darkgrey solid;
-  border-radius: 10px;
-  margin: 1vw;
-  padding-top: 1vh;
+    height: 35vh;
+    width: 25vw;
+    background-color: #ffffff;
+    border: 1px darkgrey solid;
+    border-radius: 10px;
+    margin: 1vw;
+    padding-top: 1vh;
 }
 
 .big-card {
-  height: 35vh;
-  width: 52vw;
-  background-color: #ffffff;
-  border: 1px darkgrey solid;
-  border-radius: 10px;
-  margin: 1vw;
-  padding-top: 1vh;
+    height: 35vh;
+    width: 52vw;
+    background-color: #ffffff;
+    border: 1px darkgrey solid;
+    border-radius: 10px;
+    margin: 1vw;
+    padding-top: 1vh;
 }
 
 .content {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
 }
 
+
+
+
 .titre {
-  margin-left: 1vw;
-  font-size: 20px;
-  font-family: "Verdana", "Tahoma", sans-serif;
+    margin-left: 1vw;
+    font-size: 20px;
+    font-family: "Verdana", "Tahoma", sans-serif;
 }
+
+
+
+
+
+#container {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  border-image: initial;
+}
+
+#header {
+  display: flex;
+  background-color: rgb(17, 0, 255);
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 13;
+  justify-content: space-around;
+  text-align: center;
+}
+
+
+#content-left {
+  grid-row-start: 2;
+  grid-row-end: 12;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  background-color: #dadada;
+
+
+}
+
+
+#content-right {
+  grid-row-start: 2;
+  grid-row-end:  12;
+  grid-column-start: 5;
+  grid-column-end: 13;
+
+
+
+}
+
+#logo-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+#footer {
+  display: flex;
+  background-color: rgb(255, 0, 0);
+  grid-row-start: 12;
+  grid-row-end: 13;
+  grid-column-start: 1;
+  grid-column-end: 13;
+  justify-content: center;
+  text-align: center;
+}
+
+
+#add-section {
+  display: flex;
+  background-color: blue;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+#compteur {
+  height : 3vh;
+  display: flex;
+  background-color: rgb(255, 0, 106);
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 13;
+}
+
+
+#btn-add {
+  margin-top: 2vh;
+  padding: 6px;
+  border: 2px solid whitesmoke;
+  border-radius: 10px;
+  color: white;
+  background-color: #1161f5;
+  width: 4vw;
+  font-size: 16px;
+}
+
+#btn-search:hover {
+  outline: 1px solid blue
+
+}
+
+#search-message {
+
+}
+
+#add-message {
+  height: 3 vw;
+}
+
+
+#msg-container {
+  height: 85%;
+  display: flex;
+  background-color: rgb(183, 0, 255);
+  grid-row-start: 3;
+  grid-row-end: 12;
+  grid-column-start: 5;
+  grid-column-end: 13;
+  overflow: scroll;
+}
+
+
+.row {
+  border: 1 px solid rgb(61, 60, 60);
+  justify-content: space-between ;
+  text-align: center;
+  }
+
+.avatar {
+  display: flex;
+  grid-row-start: 4;
+  grid-row-end: 9;
+  grid-column-start: 5;
+  grid-column-end: 6;
+
+  width: 20px;
+  height: 20px;
+  
+}
+
+.delete {
+  width: 20px;
+  height: 20px;
+  display: flex;
+
+}
+
