--- a/week1/makeyouruikit/style.css
+++ b/week1/makeyouruikit/style.css
@@ -54,3 +54,59 @@ body {
   flex-direction: row;
   justify-content: flex-start;
 }
+
+.color {
+  height: 85px;
+  width: 85px;
+}
+
+#dGrey{
+  background-color: #212529;   
+}
+
+
+#dBlue{
+  background-color: #03045e; 
+}
+
+
+#lBlue{
+  background-color: #caf0f8; 
+}
+
+
+#grey{
+  background-color: #ced4da; 
+}
+
+
+#blue{
+  background-color: #023e8a; 
+}
+
+a.btn {
+
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #03045e;
+  color: #fff;
+  text-align: center;
+  width: 120px;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a.btn:hover {
+  background-color: #023e8a; /* Change la couleur de fond au survol */
+}
+
+table {
+  border: 1px solid #dfdfdf;
+  border-radius: 4px;
+}
+
+th, td {
+  border: 1px solid #dfdfdf;
+  padding: 10px;
+}
