--- a/week4/mymoviz-part1/styles/Movie.module.css
+++ b/week4/mymoviz-part1/styles/Movie.module.css
@@ -1,5 +1,12 @@
 .card {
-
+   
+        
+        margin-right: 10px;
+      }
+      
+.card:last-child {
+        margin-right: 0;
+      
 
 
 }
