--- a/week4/yams-part1/styles/Home.module.css
+++ b/week4/yams-part1/styles/Home.module.css
@@ -1,10 +1,13 @@
-.main {
+.diceContainer {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   padding: 4rem 0;
+
+
+
 }
 
 .title {
