--- a/week4/yams-part1/styles/Home.module.css
+++ b/week4/yams-part1/styles/Home.module.css
@@ -5,21 +5,9 @@
   align-items: center;
   min-height: 100vh;
   padding: 4rem 0;
+  background-color: beige,
+  }
 
-
-
-}
-
-.title {
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover, .title a:focus, .title a:active {
-  text-decoration: underline;
+.main {
+  background-color: beige,
 }
