--- a/week4/yams-part1/styles/Dice.module.css
+++ b/week4/yams-part1/styles/Dice.module.css
@@ -1,9 +1,9 @@
 .dice {
-    margin : 30px;
+    margin : 5px;
 
 }
 
 .image {
-    width: 150px;
-    height: 150px;
+    width: 10vh;
+    height: 10vh;
 }
