--- a/week4/yams-part1/styles/Home.module.css
+++ b/week4/yams-part1/styles/Home.module.css
@@ -1,6 +1,3 @@
-
-
-
 .circle {
   background-color: #264332;
   border-radius: 50%;
@@ -23,13 +20,11 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  padding: 4rem 0;};
+  padding: 4rem 0;}
 
 
 
-.home {
 
-}
 
 .main {
   background-color: beige;
