--- a/week5/reactpokedex/styles/Home.module.css
+++ b/week5/reactpokedex/styles/Home.module.css
@@ -20,3 +20,12 @@
 .title a:hover, .title a:focus, .title a:active {
   text-decoration: underline;
 }
+
+.pokemonContainer {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: space-between;
+	justify-content: center;
+	margin: 0px;
+	max-width: 1200px;
+}
