--- a/week5/reactpokedex/styles/globals.css
+++ b/week5/reactpokedex/styles/globals.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400&display=swap');
+@import url('https://fonts.cdnfonts.com/css/pokemon-solid');
 
 body {
 	background: #EFEFBB;
@@ -9,10 +10,16 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-family: 'Lato';
+	font-family: 'pokemon solid';
 	margin: 0;
 }
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+	color: #CC0000;
+	letter-spacing: 3px;
+	font-family: 'pokemon Solid';
 }
