--- a/week6/themewarswithtailwind/styles/globals.css
+++ b/week6/themewarswithtailwind/styles/globals.css
@@ -12,3 +12,8 @@ body {
 * {
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: 'Starjedi';
+  src: url('/fonts/Starjedi.tff') format('truetype');
+}
