--- a/week6/themewarswithtailwind/styles/globals.css
+++ b/week6/themewarswithtailwind/styles/globals.css
@@ -18,13 +18,14 @@ body {
   src: url('/fonts/Starjedi.tff') format('truetype');
 }
 
+/* Styles pour le mode clair */
 .light {
   --bg-color: #ffffff;
   --text-color: #333333;
   --accent-color: #4a4a4a;
 }
 
-
+/* Styles pour le mode sombre */
 .dark {
   --bg-color: #1a1a1a;
   --text-color: #e5e5e5;
