--- a/week6/themewarswithtailwind/styles/globals.css
+++ b/week6/themewarswithtailwind/styles/globals.css
@@ -15,7 +15,7 @@ body {
 
 @font-face {
   font-family: 'Starjedi';
-  src: url('/fonts/Starjedi.tff') format('truetype');
+  src: url('/public/fonts/Starjedi.tff') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
