--- a/week6/themewarswithtailwind/styles/globals.css
+++ b/week6/themewarswithtailwind/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
   padding: 0;
   margin: 0;
@@ -15,7 +16,7 @@ body {
 
 @font-face {
   font-family: 'Starjedi';
-  src: url('/public/fonts/Starjedi.tff') format('truetype');
+  src: url(../public/fonts/Starjedi.ttf) format('truetype');
   font-weight: normal;
   font-style: normal;
 }
